--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
-    "axios": "^0.29.0"
+    "axios": "^0.29.0",
+    "fractional": "^1.0.0"
   }
 }
